--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>Jonathan Nguyen Resume</title>
     <!-- <link rel="stylesheet" href="reset.css"> -->
     <link rel="stylesheet" href="Resume.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
 </head>
 <body>
     <div class="grid-container">
