Updated education section to reflect prime academy

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
                         <h6>May 2017</h6>           
                     </div>
                 </div>
+                <div class="content-degree">
+                    <h4>Prime Digital Academy</h4>
+                    <div class="block-date">
+                        <h6>Expected completion: September 2022</h6>           
+                    </div>
+                </div>
             </div>
         </div>
         <div class="rightpane">
